--- a/frontmain/templates/frontmain/front.html
+++ b/frontmain/templates/frontmain/front.html
@@ -136,7 +136,7 @@
                     </ul>
                   </li>
                   <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-map-marker"></span><a href="#">Nairobi, Kenya</a></li>
-                  <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-email"></span><a href="mailto:#">support@ace-stars.com</a></li>
+                  <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-email"></span><a href="mailto:#"></a></li>
                 </ul>
                 <ul class="list-inline">
                   <li class="list-inline-item"><a class="icon novi-icon icon-sm-bigger icon-gray-1 mdi mdi-facebook" href="#"></a></li>
