--- a/frontmain/templates/frontmain/main.html
+++ b/frontmain/templates/frontmain/main.html
@@ -132,7 +132,7 @@
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
-                <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default" src="{% static 'frontmain/images/logo-default-208x463.png' %}" alt="" width="208" height="46"/><img class="logo-inverse" src="{% static 'frontmain/images/logo-inverse-208x46.png' %}" alt="" width="208" height="46"/></a></div>
+                <div class="rd-navbar-brand"><a class="brand-name" href="{% url 'home' %}"><img class="logo-default" src="{% static 'frontmain/images/logo-default-208x463.png' %}" alt="" width="208" height="46"/><img class="logo-inverse" src="{% static 'frontmain/images/logo-inverse-208x46.png' %}" alt="" width="208" height="46"/></a></div>
               </div>
               <div class="rd-navbar-aside-center">
                 <div class="rd-navbar-nav-wrap">
