--- a/billing/templates/billing/payment.html
+++ b/billing/templates/billing/payment.html
@@ -261,19 +261,20 @@ button.addEventListener("click", () => {
             type: 'GET',
             success: function(data){
                 // Perform operation on return value
-                $("#paysuccess").show(); 
+                $("#paysuccess").show();
+                window.location.href = '{% url "payment-red-email" order_id %}'; 
                   //window.location.href= '{% url "home" %}';
 
-                  setTimeout(function () {
-                    window.location.href = '{% url "payment-red-email" order_id %}'; //will redirect to your blog page (an ex: blog.html)
-                 }, 2000);
+                  //setTimeout(function () {
+                    //window.location.href = '{% url "payment-red-email" order_id %}'; //will redirect to your blog page (an ex: blog.html)
+                 //}, 2000);
 
 
 
 
             },
             complete:function(data){
-                setTimeout(fetchdata,5000);
+                setTimeout(fetchdata,7000);
             }
         });
     }
