--- a/billing/templates/billing/payment.html
+++ b/billing/templates/billing/payment.html
@@ -153,8 +153,8 @@
 
 
                   <div class="formbold-form-title">
-                      <h3>pay with m-pesa</h3>
-                      <p>There are many variations of passages of Lorem Ipsum available but the majority have.</p>
+                      <h3>Pay with m-pesa</h3>
+                      <p>Enter your mobile number and click continue to make a payment</p>
                   </div>
                   <form id="post-form">
                     {% csrf_token %}
