--- a/frontmain/templates/frontmain/about.html
+++ b/frontmain/templates/frontmain/about.html
@@ -388,8 +388,8 @@
                 </div>
                 <div class="col-md-4 col-xl-12 wow fadeInUp" data-wow-delay=".2s"><img src="{% static 'frontmain/images2/pay.jpg' %}" alt="" width="420" height="280"/>
                 </div>
-                <div class="col-md-4 col-xl-12 wow fadeInUp" data-wow-delay=".3s"><img src="images/about-us-4-420x280.jpg" alt="" width="420" height="280"/>
-                </div>
+                <!-- <div class="col-md-4 col-xl-12 wow fadeInUp" data-wow-delay=".3s"><img src="images/about-us-4-420x280.jpg" alt="" width="420" height="280"/>
+                </div> -->
               </div>
             </div>
           </div>
@@ -400,7 +400,7 @@
       <section class="section section-xs text-center bg-gray-700 novi-background bg-cover">
         <div class="container container-wide">
           <div class="box-cta-thin">
-            <p class="big"><strong>The most affordable prices!  </strong>&nbsp;<span>Choose your favorite destination!</span>&nbsp;<a class="link-bold" href="#">Order a tour! </a></p>
+            <p class="big"><strong>The best writers in the market!  </strong>&nbsp;<span>Get started with your order now</span>&nbsp;<a class="link-bold" href="#">Order a tour! </a></p>
           </div>
         </div>
       </section>
